M5 evaluate: 42.9% honest resolution (12/28 actionable), preflight RED (sonar quality gate), SonarQube violations detected, 5 remaining findings (POM + metrics), 2 new findings, no debt